--- a/VidCoder/Resources/Translations/EncodingRes.ka.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.ka.resx
@@ -733,7 +733,7 @@
     <value>სტანდარტი ფერები</value>
   </data>
   <data name="AnamorphicToolTip" xml:space="preserve">
-    <value>აქტივირებული ანამორფულით, არაკვადრატული პიქსელი ნებადართულია. შეიძლებელია ეფექტური შენახვა, მაგრამ შეუთავსებელია ზოგი რეპროდუქტორისთვის.</value>
+    <value>აქტივირებული ანამორფულით, არაკვადრატული პიქსელი ნებადართულია. შესაძლებელია ეფექტური შენახვა, მაგრამ შეუთავსებელია ზოგი რეპროდუქტორისთვის.</value>
   </data>
   <data name="ResolutionLabel" xml:space="preserve">
     <value>განზომილება:</value>
