--- a/VidCoder/Resources/Translations/LogRes.ka.resx
+++ b/VidCoder/Resources/Translations/LogRes.ka.resx
@@ -140,6 +140,6 @@
     <value>Pastebin-ისთვის პროტოკოლის ბმული კოპირებულია.</value>
   </data>
   <data name="ClearFinishedButton" xml:space="preserve">
-    <value>გასუფთავება დასრულებულია</value>
+    <value>დასრულებულის გასუფთავება</value>
   </data>
 </root>
