--- a/VidCoder/Resources/Translations/CommonRes.bs.resx
+++ b/VidCoder/Resources/Translations/CommonRes.bs.resx
@@ -307,7 +307,10 @@ Kompletna kopija GNU General Public License dolazi sa ovim programom.</value>
     <comment>Automation text for the decrease button on the number box.
 {0} - The name of the value the control is changing, for example "width"</comment>
   </data>
-  
+  <data name="OpenSplitButtonAutomationName" xml:space="preserve">
+    <value>Prikaži više radnji</value>
+    <comment>Automation name for screen readers for the "open" arrow on a split button</comment>
+  </data>
   <data name="Unknown" xml:space="preserve">
     <value>Nepoznato</value>
     <comment>Used when a value is not known.</comment>
