--- a/VidCoder/Resources/Translations/EnumsRes.bs.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.bs.resx
@@ -277,8 +277,16 @@
   <data name="UpdatePromptTiming_OnLaunch" xml:space="preserve">
     <value>Pri pokretanju</value>
   </data>
-  
-  
-  
-  
+  <data name="LogOperationType_Encode" xml:space="preserve">
+    <value>Enkodiranje</value>
+  </data>
+  <data name="LogOperationType_Scan" xml:space="preserve">
+    <value>Skeniranje</value>
+  </data>
+  <data name="PickerTimeRangeMode_Chapters" xml:space="preserve">
+    <value>Poglavlja</value>
+  </data>
+  <data name="PickerTimeRangeMode_Time" xml:space="preserve">
+    <value>Vremenski raspon</value>
+  </data>
 </root>
