--- a/VidCoder/Resources/Translations/LogRes.id.resx
+++ b/VidCoder/Resources/Translations/LogRes.id.resx
@@ -120,11 +120,26 @@
   <data name="LogWindowTitle" xml:space="preserve">
     <value>Log</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
+  <data name="GeneralLogLabel" xml:space="preserve">
+    <value>Umum</value>
+  </data>
+  <data name="LogVerbosity_Minimized" xml:space="preserve">
+    <value>Minikan</value>
+  </data>
+  <data name="LogVerbosity_Standard" xml:space="preserve">
+    <value>Standar</value>
+  </data>
+  <data name="LogVerbosity_Extended" xml:space="preserve">
+    <value>Diperluas</value>
+  </data>
+  <data name="CopyToPastebinButton" xml:space="preserve">
+    <value>Salin Link Pastebin</value>
+    <comment>Label for button that copies the log to Pastebin and puts the URL on the clipboard.</comment>
+  </data>
+  <data name="PastebinSuccessStatus" xml:space="preserve">
+    <value>Link untuk daftar masuk ke Pastebin sudah disalin ke clipboard.</value>
+  </data>
+  <data name="ClearFinishedButton" xml:space="preserve">
+    <value>Hapus yang sudah beres</value>
+  </data>
 </root>
