--- a/VidCoder/Resources/Translations/LogRes.tr.resx
+++ b/VidCoder/Resources/Translations/LogRes.tr.resx
@@ -120,11 +120,26 @@
   <data name="LogWindowTitle" xml:space="preserve">
     <value>Günlük</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
+  <data name="GeneralLogLabel" xml:space="preserve">
+    <value>Genel</value>
+  </data>
+  <data name="LogVerbosity_Minimized" xml:space="preserve">
+    <value>Küçültülmüş</value>
+  </data>
+  <data name="LogVerbosity_Standard" xml:space="preserve">
+    <value>Standart</value>
+  </data>
+  <data name="LogVerbosity_Extended" xml:space="preserve">
+    <value>Genişletilmiş</value>
+  </data>
+  <data name="CopyToPastebinButton" xml:space="preserve">
+    <value>Pastebin bağlantısını kopyala</value>
+    <comment>Label for button that copies the log to Pastebin and puts the URL on the clipboard.</comment>
+  </data>
+  <data name="PastebinSuccessStatus" xml:space="preserve">
+    <value>Bağlantı Pastebin'de oturum açmak için panoya kopyalandı.</value>
+  </data>
+  <data name="ClearFinishedButton" xml:space="preserve">
+    <value>Temizleme bitti</value>
+  </data>
 </root>
