--- a/VidCoder/Resources/Translations/MainRes.de.resx
+++ b/VidCoder/Resources/Translations/MainRes.de.resx
@@ -672,13 +672,31 @@
     <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion. This string is only used when there are multiple items queued.
 {0} is the encode complete action, ex "Shut down"</comment>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="VideoEncodingOptionsToolTip" xml:space="preserve">
+    <value>Video-Encodierungsoptionen</value>
+  </data>
+  <data name="AudioEncodingOptionsToolTip" xml:space="preserve">
+    <value>Audio-Encodierungsoptionen</value>
+  </data>
+  <data name="NewVersionDownloadFinishedOnLaunchStatus" xml:space="preserve">
+    <value>Version {0} wurde erfolgreich heruntergeladen.</value>
+  </data>
+  <data name="RemoveFromQueueMenuItem" xml:space="preserve">
+    <value>Aus der Warteschlange entfernen</value>
+  </data>
+  <data name="ClearSucceededMenuItem" xml:space="preserve">
+    <value>Erfolgreiche entfernen</value>
+  </data>
+  <data name="ClearFailedMenuItem" xml:space="preserve">
+    <value>Fehlgeschlagene entfernen</value>
+  </data>
+  <data name="ClearQueueConfirmationMessage" xml:space="preserve">
+    <value>Wollen Sie wirklich alle Einträge aus der Warteschlange entfernen?</value>
+  </data>
+  <data name="RemoveAllFomQueueMenuItem" xml:space="preserve">
+    <value>Alle aus der Warteschlange entfernen</value>
+  </data>
+  <data name="EncodeCompleteActionAbortedDueToErrorsMessage" xml:space="preserve">
+    <value>"Nach Abschluss"-Aktion wurde nach dem Encodieren nicht ausgeführt, da einzelne Einträge aus der Liste fehlgeschlagen sind.</value>
+  </data>
 </root>
