--- a/VidCoder/Resources/Translations/MainRes.id.resx
+++ b/VidCoder/Resources/Translations/MainRes.id.resx
@@ -670,13 +670,31 @@
     <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion. This string is only used when there are multiple items queued.
 {0} is the encode complete action, ex "Shut down"</comment>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="VideoEncodingOptionsToolTip" xml:space="preserve">
+    <value>Pilihan pengkodean video</value>
+  </data>
+  <data name="AudioEncodingOptionsToolTip" xml:space="preserve">
+    <value>Pilihan pengkodean Suara</value>
+  </data>
+  <data name="NewVersionDownloadFinishedOnLaunchStatus" xml:space="preserve">
+    <value>Versi {0} sudah selesai diunduh.</value>
+  </data>
+  <data name="RemoveFromQueueMenuItem" xml:space="preserve">
+    <value>Hapus dari antrian</value>
+  </data>
+  <data name="ClearSucceededMenuItem" xml:space="preserve">
+    <value>Hapus yang selesai</value>
+  </data>
+  <data name="ClearFailedMenuItem" xml:space="preserve">
+    <value>Hapus yang gagal</value>
+  </data>
+  <data name="ClearQueueConfirmationMessage" xml:space="preserve">
+    <value>Yakin mau hapus semua dari antrian?</value>
+  </data>
+  <data name="RemoveAllFomQueueMenuItem" xml:space="preserve">
+    <value>Hapus semua dari antrian</value>
+  </data>
+  <data name="EncodeCompleteActionAbortedDueToErrorsMessage" xml:space="preserve">
+    <value>Tindakan setelah pengkodean selesai gagal dikerjakan karena ada kesalahan pada daftar hasil pengkodean.</value>
+  </data>
 </root>
