--- a/VidCoder/Resources/Translations/SubtitleRes.tr.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.tr.resx
@@ -159,7 +159,9 @@
   <data name="ForeignAudioSearch" xml:space="preserve">
     <value>Yabancı Ses Araması</value>
   </data>
-  
+  <data name="SubtitleFilePickerText" xml:space="preserve">
+    <value>Altyazı ekle</value>
+  </data>
   <data name="SubtitleCharsetDetectionFailedMessage" xml:space="preserve">
     <value>Altyazının karakter kodlaması algılanamadı. Altyazıların doğru gösterileceğinden emin olmak için UTF-8 olarak yeniden kaydedin.</value>
   </data>
@@ -170,6 +172,10 @@
     <value>{0} harici</value>
     <comment>{0} is the number of external subtitle tracks included. e.g. "5 external"</comment>
   </data>
-  
-  
+  <data name="ImportSubtitleButton" xml:space="preserve">
+    <value>Dosyadan içe aktar...</value>
+  </data>
+  <data name="FilePickerDescription" xml:space="preserve">
+    <value>Altyazı dosyaları</value>
+  </data>
 </root>
